[gd_scene load_steps=5 format=3 uid="uid://bw7ejyoqc361q"]

[ext_resource type="Texture2D" uid="uid://h6kxwea1t1hg" path="res://assets/sprites/icons/Asset 71@2x.png" id="1_gfk7p"]
[ext_resource type="Script" uid="uid://5xteqhnwhat2" path="res://source/GUI/gui.gd" id="1_n7kt6"]
[ext_resource type="Script" uid="uid://xhdi32sigwht" path="res://source/Settings/settings_button.gd" id="2_n7kt6"]
[ext_resource type="PackedScene" uid="uid://cmo8qvyy2krdo" path="res://source/InfoScreen/InfoScreen.tscn" id="4_4fmk5"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_n7kt6")

[node name="NextPieceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 28.0
offset_right = 116.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Next"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextPiece" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 128.0
offset_bottom = 128.0

[node name="NextPieceThumbnail" type="TextureRect" parent="NextPiece"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 2

[node name="HoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 185.0
offset_right = 114.0
offset_bottom = 208.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Hold"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeldPiece" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 64.0
offset_top = 224.0
offset_right = 128.0
offset_bottom = 288.0

[node name="HeldPieceThumbnail" type="TextureRect" parent="HeldPiece"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 2

[node name="Information" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 288.0

[node name="VBoxContainer" type="VBoxContainer" parent="Information"]
layout_mode = 2

[node name="LevelText" type="Label" parent="Information/VBoxContainer"]
layout_mode = 2
text = "Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelNumber" type="Label" parent="Information/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Label" parent="Information/VBoxContainer"]
layout_mode = 2

[node name="LinesText" type="Label" parent="Information/VBoxContainer"]
layout_mode = 2
text = "Lines"
horizontal_alignment = 1

[node name="LinesNumber" type="Label" parent="Information/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="Spacer2" type="Label" parent="Information/VBoxContainer"]
layout_mode = 2

[node name="ScoreText" type="Label" parent="Information/VBoxContainer"]
layout_mode = 2
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreNumber" type="Label" parent="Information/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="SettingsText" type="Label" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 315.0
offset_right = 702.0
offset_bottom = 338.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -345.0
offset_right = -72.0
offset_bottom = -297.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_gfk7p")
expand_mode = 2
script = ExtResource("2_n7kt6")

[node name="InfoScreen" parent="." instance=ExtResource("4_4fmk5")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -132.0
offset_right = 132.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
